# GMailPLugin - CoreInterface

ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT3_SUPPORT)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

INCLUDE_DIRECTORIES(
	../
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET(GMAIL_PLUGIN_SRCS gmail_notify.cpp)

MY_AUTOMOC( GMAIL_PLUGIN_SRCS )

ADD_LIBRARY(google_notify SHARED ${GMAIL_PLUGIN_SRCS})

TARGET_LINK_LIBRARIES(google_notify ${QT_QTCORE_LIBRARY})
TARGET_LINK_LIBRARIES(google_notify iris)

INSTALL(TARGETS google_notify DESTINATION ${QT_PLUGINS_DIR}/synapse-im)
